lib/selection_hook_flutter_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for `src/selection_hook_flutter.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class SelectionHookFlutterBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  SelectionHookFlutterBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  SelectionHookFlutterBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Create a new SelectionHook instance.
  ///
  /// Allocates and initializes platform-specific resources.
  /// Call sh_set_selection_callback BEFORE sh_start.
  ///
  /// @return Opaque handle, or NULL on failure. On failure, call
  /// sh_last_global_error() for details.
  /// @thread_safety Safe from any thread.
  ffi.Pointer<SelectionHook> sh_create() {
    return _sh_create();
  }

  late final _sh_createPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<SelectionHook> Function()>>(
        'sh_create',
      );
  late final _sh_create = _sh_createPtr
      .asFunction<ffi.Pointer<SelectionHook> Function()>();

  /// Destroy a SelectionHook instance.
  ///
  /// Caller MUST ensure sh_stop has returned before calling sh_destroy.
  /// Releases all native resources.
  ///
  /// @param hook Instance to destroy. May be NULL (no-op).
  /// @thread_safety Safe from any thread. Not safe if callback is in-flight
  /// (caller responsibility to serialize with sh_stop).
  void sh_destroy(ffi.Pointer<SelectionHook> hook) {
    return _sh_destroy(hook);
  }

  late final _sh_destroyPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<SelectionHook>)>
      >('sh_destroy');
  late final _sh_destroy = _sh_destroyPtr
      .asFunction<void Function(ffi.Pointer<SelectionHook>)>();

  /// Start monitoring text selections.
  ///
  /// Initializes platform-specific hooks and begins monitoring. A callback
  /// must have been registered via sh_set_selection_callback before calling
  /// this function.
  ///
  /// On macOS, this will call AXIsProcessTrustedWithOptions with prompt
  /// before any AXAPI calls. The user must grant accessibility permissions.
  ///
  /// @param hook Valid SelectionHook instance.
  /// @return SH_OK (0) on success, negative error code on failure.
  /// @thread_safety Safe from any thread. The callback will be invoked from
  /// native threads.
  int sh_start(ffi.Pointer<SelectionHook> hook) {
    return _sh_start(hook);
  }

  late final _sh_startPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<SelectionHook>)>>(
        'sh_start',
      );
  late final _sh_start = _sh_startPtr
      .asFunction<int Function(ffi.Pointer<SelectionHook>)>();

  /// Stop monitoring text selections.
  ///
  /// Unregisters platform hooks and blocks until no callback is in-flight.
  /// After sh_stop returns, it is safe to sh_destroy and/or close the
  /// NativeCallable.
  ///
  /// @param hook Valid SelectionHook instance.
  /// @return SH_OK (0) on success, SH_ERR_NOT_RUNNING if not started.
  /// @thread_safety Safe from any thread. Blocks until in-flight callbacks
  /// complete.
  int sh_stop(ffi.Pointer<SelectionHook> hook) {
    return _sh_stop(hook);
  }

  late final _sh_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<SelectionHook>)>>(
        'sh_stop',
      );
  late final _sh_stop = _sh_stopPtr
      .asFunction<int Function(ffi.Pointer<SelectionHook>)>();

  /// Check if the hook is currently running.
  ///
  /// @param hook Valid SelectionHook instance.
  /// @return 1 if running, 0 if not running.
  /// @thread_safety Safe from any thread.
  int sh_is_running(ffi.Pointer<SelectionHook> hook) {
    return _sh_is_running(hook);
  }

  late final _sh_is_runningPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<SelectionHook>)>>(
        'sh_is_running',
      );
  late final _sh_is_running = _sh_is_runningPtr
      .asFunction<int Function(ffi.Pointer<SelectionHook>)>();

  /// Get the current text selection synchronously.
  ///
  /// Returns a snapshot of the current selection, or NULL if no text is
  /// selected or the hook is not running.
  ///
  /// The returned SHSelectionData* is owned by the library. It is valid until
  /// the next call to sh_get_current_selection OR until
  /// sh_free_selection_data is called on the same hook, whichever comes first.
  /// Dart MUST copy the data before the next call.
  ///
  /// @param hook Valid SelectionHook instance.
  /// @return Current selection data (library-owned), or NULL.
  /// @thread_safety Safe from any thread.
  ffi.Pointer<SHSelectionData> sh_get_current_selection(
    ffi.Pointer<SelectionHook> hook,
  ) {
    return _sh_get_current_selection(hook);
  }

  late final _sh_get_current_selectionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<SHSelectionData> Function(ffi.Pointer<SelectionHook>)
        >
      >('sh_get_current_selection');
  late final _sh_get_current_selection = _sh_get_current_selectionPtr
      .asFunction<
        ffi.Pointer<SHSelectionData> Function(ffi.Pointer<SelectionHook>)
      >();

  /// Free a SHSelectionData previously returned by sh_get_current_selection.
  ///
  /// This is an explicit release. It is also implicitly released by the next
  /// sh_get_current_selection call. Safe to call with NULL.
  ///
  /// @param hook Valid SelectionHook instance.
  /// @param data Pointer returned by sh_get_current_selection, or NULL (no-op).
  /// @thread_safety Safe from any thread.
  void sh_free_selection_data(
    ffi.Pointer<SelectionHook> hook,
    ffi.Pointer<SHSelectionData> data,
  ) {
    return _sh_free_selection_data(hook, data);
  }

  late final _sh_free_selection_dataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<SelectionHook>,
            ffi.Pointer<SHSelectionData>,
          )
        >
      >('sh_free_selection_data');
  late final _sh_free_selection_data = _sh_free_selection_dataPtr
      .asFunction<
        void Function(ffi.Pointer<SelectionHook>, ffi.Pointer<SHSelectionData>)
      >();

  /// Register the text selection callback.
  ///
  /// Stores a function pointer that will be called from native threads when
  /// a text selection is detected. Must be called before sh_start.
  ///
  /// The callback will be invoked from native system threads. Use
  /// `NativeCallable<Void Function(Pointer<SHSelectionData>)>.listener(...)`
  /// on the Dart side to receive these callbacks.
  ///
  /// Calling this after sh_start has undefined behavior — stop first.
  ///
  /// @param hook Valid SelectionHook instance.
  /// @param callback Function pointer, or NULL to unregister.
  /// @return SH_OK (0) on success.
  /// @thread_safety May be called from any thread before sh_start.
  int sh_set_selection_callback(
    ffi.Pointer<SelectionHook> hook,
    SHSelectionCallback callback,
  ) {
    return _sh_set_selection_callback(hook, callback);
  }

  late final _sh_set_selection_callbackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<SelectionHook>, SHSelectionCallback)
        >
      >('sh_set_selection_callback');
  late final _sh_set_selection_callback = _sh_set_selection_callbackPtr
      .asFunction<
        int Function(ffi.Pointer<SelectionHook>, SHSelectionCallback)
      >();

  /// Get the last error description for this hook instance.
  ///
  /// Returns a human-readable description of the last error that occurred on
  /// the calling thread. The returned string is owned by the library and is
  /// valid until the next call to sh_last_error from the same thread.
  ///
  /// @param hook Valid SelectionHook instance.
  /// @return Error description (UTF-8, NUL-terminated), or NULL if no error.
  /// @thread_safety Thread-local — each thread gets its own error state.
  ffi.Pointer<ffi.Char> sh_last_error(ffi.Pointer<SelectionHook> hook) {
    return _sh_last_error(hook);
  }

  late final _sh_last_errorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<SelectionHook>)
        >
      >('sh_last_error');
  late final _sh_last_error = _sh_last_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<SelectionHook>)>();

  /// Get the last global error description (for constructor failures).
  ///
  /// Used when sh_create returns NULL. Returns a description of why creation
  /// failed. The returned string is owned by the library and is valid until
  /// the next call to sh_last_global_error.
  ///
  /// @return Error description (UTF-8, NUL-terminated), or NULL if no error.
  /// @thread_safety Thread-safe. Returns the most recent global error.
  ffi.Pointer<ffi.Char> sh_last_global_error() {
    return _sh_last_global_error();
  }

  late final _sh_last_global_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'sh_last_global_error',
      );
  late final _sh_last_global_error = _sh_last_global_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();
}

final class SelectionHook extends ffi.Opaque {}

/// 2D coordinate in screen pixels.
final class SHPoint extends ffi.Struct {
  @ffi.Int32()
  external int x;

  @ffi.Int32()
  external int y;
}

/// Text selection data returned via callback or sh_get_current_selection.
///
/// All `const char*` fields are owned by the library. In callbacks, they are
/// valid only for the duration of the callback. In sh_get_current_selection, they
/// are valid until the next call or until sh_free_selection_data.
///
/// Sentinel value for unavailable coordinates: -99999 (INVALID_COORDINATE).
/// On Linux, startTop/startBottom/endTop/endBottom are always INVALID_COORDINATE.
/// On Linux Wayland, mouseStart/mouseEnd may also be INVALID_COORDINATE.
final class SHSelectionData extends ffi.Struct {
  /// Selected text content (UTF-8, NUL-terminated).
  external ffi.Pointer<ffi.Char> text;

  /// Program name that triggered the selection (UTF-8, NUL-terminated).
  external ffi.Pointer<ffi.Char> program_name;

  /// First paragraph top-left (screen pixels).
  external SHPoint start_top;

  /// First paragraph bottom-left (screen pixels).
  external SHPoint start_bottom;

  /// Last paragraph top-right (screen pixels).
  external SHPoint end_top;

  /// Last paragraph bottom-right (screen pixels).
  external SHPoint end_bottom;

  /// Mouse position when selection started (screen pixels).
  external SHPoint mouse_start;

  /// Mouse position when selection ended (screen pixels).
  external SHPoint mouse_end;

  /// Selection method (enum SHSelectionMethod).
  @ffi.Int32()
  external int method;

  /// Position level (enum SHPositionLevel).
  @ffi.Int32()
  external int pos_level;

  /// Fullscreen state of the source window (macOS only, 0=unknown/no, 1=yes).
  @ffi.Int32()
  external int is_fullscreen;
}

/// Selection method identifiers.
enum SHSelectionMethod {
  SH_METHOD_NONE(0),
  SH_METHOD_UIA(1),

  /// Removed upstream, kept for alignment.
  SH_METHOD_FOCUSCTL(2),
  SH_METHOD_ACCESSIBLE(3),
  SH_METHOD_AXAPI(11),

  /// @reserved AT-SPI method reserved for future use.
  SH_METHOD_ATSPI(21),
  SH_METHOD_PRIMARY(22),
  SH_METHOD_CLIPBOARD(99);

  final int value;
  const SHSelectionMethod(this.value);
